--- a/cal.html
+++ b/cal.html
@@ -28,6 +28,7 @@
     }
     
     .month {
+        text-align: center;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -47,8 +48,10 @@
         background-color: #e3b331;
         padding: 10px;
         border-radius: 5px;
-        border-bottom: 1px solid #1b211b;
-        border-right: 1px solid #1b211b;
+        border-bottom: 3px solid #1b211b;
+        border-right: 3px solid #1b211b;
+        border-top: 3px solid #1b211b;
+        border-left: 3px solid #1b211b;
         
     }
 
@@ -64,10 +67,11 @@
     }
 
     .day {
-        padding: 10px;
+        padding: 20px;
         text-align: center;
-        border-bottom: 1px solid #1b211b;
+        border-bottom: 2px solid #1b211b;
         border-right: 1px solid #1b211b;
+        border-left: 1px solid #1b211b;        
     }
 </style>
 </head>
@@ -121,7 +125,11 @@
         }
 
         document.write('</div>');
+
     </script>
+    <footer>
+        <p>&copy; Developed by Arif Sadiq</p>
+    </footer>
 </div>
 
 </body>
